# cognitive-diagram-nav-mcp

./: .gitignore  MCP_CONFIG_README.md  QUICK_START.md  README.md  claude_desktop_config_example.json  config_example.json  pyproject.toml
docs/: DIAGRAM_NAV_MCP_DESIGN.md  MCP_CONFIG_README.md  PROJECT_SUMMARY_DIAGRAM_NAV_MCP.md  QUICK_START.md  demo_results.md
src/cognitive_diagram_nav/: __init__.py  graph_engine.py  models.py  server.py  storage.py
tests/: test_composition.py  test_equivalence.py  test_exploration.py  test_graph_engine.py  test_persistence.py  test_proof.py  test_rewriting.py
